--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
     });
 
     yesBtn.addEventListener("click", () => {
-      alert("Yay! ❤️ I knew it!");
+      alert("Yay! ❤️ I knew it!, I love you so much❤️❤️❤️");
     });
   </script>
 </body>
 </html>
+
